--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   flutter_markdown: ^0.6.17+2
   markdown: ^7.1.1
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
