--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_markdown: ^0.6.17+2
   markdown: ^7.1.1
   flutter_svg: ^2.0.7
+  flutter_spinkit: ^5.2.0
+  meta: ^1.9.1
+  flutter_highlight: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -85,5 +88,8 @@ flutter:
     - family: Inter Italic
       fonts:
         - asset: assets/fonts/Inter-italic.ttf
+    - family: Inconsolata
+      fonts:
+        - asset: assets/fonts/Inconsolata.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
