--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   meta: ^1.9.1
   flutter_highlight: ^0.7.0
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
